--- a/Home.html
+++ b/Home.html
@@ -9,13 +9,13 @@
     <title>Laboratorio2</title>
  
     <!-- CSS -->
-    <link rel="stylesheet" href="Estiloslab2.css">
+    <link rel="stylesheet" href="Estilos.css">
 </head>
 <body>
 <header>
 		<nav class="nav">
 			<ul class="nav_list ">
-          <li id="nav_logo" class="nav_items"><a class="nav_logo-modified" href="#">Logo</a></li>
+          <li id="nav_logo"><a class="nav_logo-modified" href="#">Logo</a></li>
 				<li class="nav_items"><a class="nav_link" href="#">Videos to rent</a></li>
 			<li class="nav_items"><a class="nav_link" href="#">videos to buy</a></li>
         <li class="nav_items"><a class="nav_link" href="#">Used DVDs</a></li>
