Llego le tiro le mando el estilo

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -9,13 +9,17 @@
     <title>Laboratorio2</title>
  
     <!-- CSS -->
-    <link rel="stylesheet" href="Estilos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/Estilos.css">
 </head>
 <body>
 <header>
 		<nav class="nav">
 			<ul class="nav_list ">
-          <li id="nav_logo"><a class="nav_logo-modified" href="#">Logo</a></li>
+          <li id="nav_logo" > 
+            <img src="/Assets/pngocean.com.png" width="84px" height="54px" alt="">
+            <!--<a  class="nav_logo-modified" href="#">Logo</a></li>-->
+            
 				<li class="nav_items"><a class="nav_link" href="#">Videos to rent</a></li>
 			<li class="nav_items"><a class="nav_link" href="#">videos to buy</a></li>
         <li class="nav_items"><a class="nav_link" href="#">Used DVDs</a></li>
@@ -39,15 +43,17 @@
  </ul>
 </nav>
 
-<h2> Videos less than $10</h2>
-<p class="paragraph">lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lorem turpis, fermentum ut lorem eget, scelerisque sagittis neque. Nunc cursus metus ac scelerisque consectetur.  </p>
+<h2 class="main-header"> Videos less than $10</h2>
+<p  class="paragraph">Lost you chance to see you favorite movie in the cinema? <br> Don't worry!! <br> With our  HUGE selection, you can watch your favorite movie, ANYTIME!!  </p>
 
 <main id="main">
   <article class="main-article" >
-   <section class="article-section"> <p class="section-paragraph">Product Image 1 </p> </section>
+    <img src="/Assets/interstellar.jpg" class="article-section" width="300" height="200"  alt="Poster Interstellar"> <!--<p class="section-paragraph">Product Image 1 </p> </section>-->
+   <!--<section class="article-section"></section>-->
+    
     <section class="article-section2">
-    <h3>Video title 1 </h3>
-        <p>AAP:$18.99</p>
+    <h3 class="sec-header">Interstellar</h3>
+        <p >AAP:$18.99</p>
      <p>Price you pay<b> $9.99 </b></p>
      <p >Your saving $9</p>
           </section>
@@ -55,9 +61,9 @@
   </article>
   
 <article class="main-article" >
-   <section class="article-section"> <p class="section-paragraph">Product Image 1 </p> </section>
+  <img src="/Assets/poster-de-pelicula-shrek-2001-rn6t65.jpg" class="article-section" width="300" height="200"  alt="Poster Shrek">
     <section class="article-section2">
-    <h3>Video title 1 </h3>
+    <h3 class="sec-header">Shrek </h3>
         <p>AAP:$18.99</p>
      <p>Price you pay<b> $9.99 </b></p>
      <p >Your saving $9</p>
@@ -66,9 +72,9 @@
   </article>
   
   <article class="main-article" >
-   <section class="article-section"> <p class="section-paragraph">Product Image 1 </p> </section>
+    <img src="/Assets/El_hobbitt.jpg" class="article-section" width="300" height="200"  alt="">
     <section class="article-section2">
-    <h3>Video title 1 </h3>
+    <h3 class="sec-header">The Hobbit </h3>
         <p>AAP:$18.99</p>
      <p>Price you pay<b> $9.99 </b></p>
      <p >Your saving $9</p>
@@ -76,9 +82,10 @@
 
   </article>
    <article class="main-article" >
-   <section class="article-section"> <p class="section-paragraph">Product Image 1 </p> </section>
+    <img src="/Assets/lacamarasecreta.jpg" class="article-section" width="300" height="200"  alt="">
+   
     <section class="article-section2">
-    <h3>Video title 1 </h3>
+    <h3 class="sec-header">Harry Potter: The secret chamber </h3>
         <p>AAP:$18.99</p>
      <p>Price you pay<b> $9.99 </b></p>
      <p >Your saving $9</p>
