--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -46,13 +46,12 @@
 <h2 class="main-header"> Videos less than $10</h2>
 <p  class="paragraph">Lost you chance to see you favorite movie in the cinema? <br> Don't worry!! <br> With our  HUGE selection, you can watch your favorite movie, ANYTIME!!  </p>
 
-<main id="main">
-  <article class="main-article" >
-    <img src="/Assets/interstellar.jpg" class="article-section" width="300" height="200"  alt="Poster Interstellar"> <!--<p class="section-paragraph">Product Image 1 </p> </section>-->
-   <!--<section class="article-section"></section>-->
+<main id="movies">
+  <article class="movie-item" >
+    <img src="/Assets/interstellar.jpg" class="movie-banner" width="300" height="200"  alt="Poster Interstellar"> 
     
-    <section class="article-section2">
-    <h3 class="sec-header">Interstellar</h3>
+    <section class="movie-description">
+    <h3 class="movie-title">Interstellar</h3>
         <p >AAP:$18.99</p>
      <p>Price you pay<b> $9.99 </b></p>
      <p >Your saving $9</p>
@@ -60,10 +59,10 @@
 
   </article>
   
-<article class="main-article" >
-  <img src="/Assets/poster-de-pelicula-shrek-2001-rn6t65.jpg" class="article-section" width="300" height="200"  alt="Poster Shrek">
-    <section class="article-section2">
-    <h3 class="sec-header">Shrek </h3>
+<article class="movie-item" >
+  <img src="/Assets/poster-de-pelicula-shrek-2001-rn6t65.jpg" class="movie-banner" width="300" height="200"  alt="Poster Shrek">
+    <section class="movie-description">
+    <h3 class="movie-title">Shrek </h3>
         <p>AAP:$18.99</p>
      <p>Price you pay<b> $9.99 </b></p>
      <p >Your saving $9</p>
@@ -71,21 +70,21 @@
 
   </article>
   
-  <article class="main-article" >
-    <img src="/Assets/El_hobbitt.jpg" class="article-section" width="300" height="200"  alt="">
-    <section class="article-section2">
-    <h3 class="sec-header">The Hobbit </h3>
+  <article class="movie-item" >
+    <img src="/Assets/El_hobbitt.jpg" class="movie-banner" width="300" height="200"  alt="">
+    <section class="movie-description">
+    <h3 class="movie-title">The Hobbit </h3>
         <p>AAP:$18.99</p>
      <p>Price you pay<b> $9.99 </b></p>
      <p >Your saving $9</p>
           </section>
 
   </article>
-   <article class="main-article" >
-    <img src="/Assets/lacamarasecreta.jpg" class="article-section" width="300" height="200"  alt="">
+   <article class="movie-item" >
+    <img src="/Assets/lacamarasecreta.jpg" class="movie-banner" width="300" height="200"  alt="">
    
-    <section class="article-section2">
-    <h3 class="sec-header">Harry Potter: The secret chamber </h3>
+    <section class="movie-description">
+    <h3 class="movie-title">Harry Potter: The secret chamber </h3>
         <p>AAP:$18.99</p>
      <p>Price you pay<b> $9.99 </b></p>
      <p >Your saving $9</p>
