--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -46,7 +46,7 @@
 <h2 class="main-header"> Videos less than $10</h2>
 <p  class="paragraph">Lost you chance to see you favorite movie in the cinema? <br> Don't worry!! <br> With our  HUGE selection, you can watch your favorite movie, ANYTIME!!  </p>
 
-<main id="movies">
+<main id="movie-list">
   <article class="movie-item" >
     <img src="/Assets/interstellar.jpg" class="movie-banner" width="300" height="200"  alt="Poster Interstellar"> 
     
